Make sure we drop native theming of form controls in various situations when we need to.  Bug 184359 and its dependencies (171598, 181490, 184218, 185708, 188785, 189907, 190610).  Patch by tim@prismelite.com (Tim Hill), r=bryner, sr=bzbarsky, a=asa